# diy-efis

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  COPYRIGHT  README.md  deploy-diy-efis.ps1  diy-efis.sln
apps/att_au_nz/: CMakeLists.txt  att.xml  main.c
apps/dial/: CMakeLists.txt  README.md  dial.xml
apps/edd4_au_nz/: CMakeLists.txt  edd4_au_nz.xml  main.c
framework/: CMakeLists.txt  Makefile  diy-efis.code-workspace
framework/CanFly/: CanFly.csproj  Program.cs
framework/CanFly.CommandLine/: Glob.cs
framework/CanFly.CommandLine/Abstractions/: Converters.cs  DirectoryInfoFactory.cs  DriveInfoBase.cs  FileBase.Async.cs  FileBase.cs  FileInfoWrapper.cs  IDirectory.cs  IDriveInfo.cs  IDriveInfoFactory.cs  IFileInfo.cs  IFileInfoFactory.cs  IFileStreamFactory.cs  IFileSystemInfo.cs  PathWrapper.cs
framework/CanFly.CoreLibrary/: Application.cs  CanFly.CoreLibrary.nfproj  CanFlyEvent.cs  CanFlyEventDispatcher.cs  CanFlyMsg.cs  CanFlyMsgSink.cs  Canvas.cs  DirectoryEnumerator.cs  Extent.cs  Font.cs  GdiObject.cs  Neutron.cs  Pen.cs  Photon.cs  Point.cs  PointArray.cs  Rect.cs  Screen.cs  Stream.cs  Widget.cs  packages.config
framework/CanFly.DiyEfis/: CanFly.DiyEfis.nfproj  Makefile  Program.cs  packages.config
framework/CanFly.MetadataProcessor/: AssemblyBuilder.cs  CanFly.MetadataProcessor.csproj  CanFlyAssemblyBuilder.cs  CanFlyAssemblyDefinition.cs  CanFlyDependencyGenerator.cs  CanFlyDumperGenerator.cs  CanFlySkeletonGenerator.cs  ICanFlyTable.cs  packages.config  packages.lock.json
framework/CanFly.Neutron/: CMakeLists.txt  CanFly.Neutron.nfproj  CanFlyMsg.cs  DirectoryEnumerator.cs  EventProxy.cs  Makefile  Stream.cs  Thread.cs
framework/CanFly.Photon/: CMakeLists.txt  CanFly.Photon.nfproj  Canvas.cs  Color.cs  Extent.cs  Font.cs  GdiObject.cs  Makefile  Pen.cs  Photon.cs  Point.cs  PointArray.cs  Rect.cs  Screen.cs  Stream.cs  Widget.cs
framework/CanFly.Proton/: AirspeedWidget.cs  AltitudeWidget.cs  AnnunciatorWidget.cs  AttitudeWidget.cs  CMakeLists.txt  CanFly.Proton.nfproj  Colors.cs  DialWidget.cs  GaugeWidget.cs  GpsWidget.cs  HSIWidget.cs  Keys.cs  KeysMap.cs  LayoutWidget.cs  Makefile  Menu.cs  MenuItem.cs  MenuItemCancel.cs  MenuItemChecklist.cs  MenuItemEdit.cs  MenuItemEnter.cs  MenuItemEvent.cs  MenuItemItem.cs  MenuItemMenu.cs  MenuItemOK.cs  MenuItemPopup.cs  MenuMap.cs  MenuWidget.cs  Pens.cs  Step.cs  TickMark.cs  VerticalBarWidget.cs  packages.config
framework/CoreLibrary/: CMakeLists.txt  CoreLibrary.nfproj  Makefile  coreAssembly.rsp
framework/CoreLibrary/CanFly/: CanFlyID.cs  (+15 more)
framework/Kotuku.Efi/: Annunciator.cs  EFIDialGauge.cs  EFIWidget.cs  Makefile  Program.cs  SliderGauge.cs  TempWidget.cs
framework/Kotuku.Pfd/: Makefile  PFDWidget.cs  Program.cs
framework/System.Collections/: CMakeLists.txt  DictionaryEntry.cs  Hashtable.cs  IDictionary.cs  Makefile  Queue.cs  Stack.cs  System.Collections.nfproj
framework/System.Math/: CMakeLists.txt  Makefile  Math.cs  System.Math.nfproj
framework/System.Text/: CMakeLists.txt  Decoder.cs  Encoding.cs  Makefile  StringBuilder.cs  System.Text.nfproj  UTF8Decoder.cs  UTF8Encoding.cs
framework/System.Threading/: System.Threading.nfproj
framework/assemblies/: .gitignore  README.md
framework/emulator/: README.md  diy-efis.cdb  diy-efis.reg
src/canfly/: CMakeLists.txt  canfly_api.md  canfly_app.ld  canfly_stubs.c  crt0.S  newlib_stubs.c
src/mfdlib/: CMakeLists.txt  canfly.c  canfly_user.c  event_handlers.c  event_handlers.h  menu_handlers.c  menu_handlers.h  mfd.c  mfd.h  variant.c
src/proton/: CMakeLists.txt  dialog_widgets.h  instrument_widgets.h
tools/yehudi/: CMakeLists.txt  airspeed_widget.cpp  alert_dialog.cpp  altitude_widget.cpp  annunciator_widgets.cpp  application.cpp  attitude_widget.cpp  button_widget.cpp  checkbox_widget.cpp  checklist_action.cpp  code_generator.cpp  code_generator.h  combobox_widget.cpp  compass_widget.cpp  data_bound_widget.cpp  definitions_generator.cpp  definitions_generator.h  dialog_widget.cpp  download_pugixml.sh  edit_widget.cpp  edutemps_widget.cpp  event_action.cpp  gauge_widget.cpp  generate_panel_or_groupbox_widget_content.cpp  groupbox_widget.cpp  header_generator.cpp  header_generator.h  hsi_widget.cpp  key_maps.cpp  label_widget.cpp  listbox_widget.cpp  map_widget.cpp  marquee_widget.cpp  menus.cpp  pancake_widget.cpp  panel_widget.cpp  popup_action.cpp  spinedit_action.cpp  tab_widget.cpp  textedit_action.cpp  (+5 more)
win32_tools/arinc2db/: CMakeLists.txt  arinc2db.cpp  arinc2db.vcxproj  arinc2db.vcxproj.filters
win32_tools/atomdb/: CMakeLists.txt  atomdb.vcxproj  atomdb.vcxproj.filters
win32_tools/fixedpoint/: CMakeLists.txt  fixedpoint.vcxproj  fixedpoint.vcxproj.filters
win32_tools/graviton/: CMakeLists.txt  graviton.vcxproj  graviton.vcxproj.filters
win32_tools/gtopo2db/: CMakeLists.txt  gtopo2db.cpp  gtopo2db.vcxproj  gtopo2db.vcxproj.filters
win32_tools/indexdb/: CMakeLists.txt  cargs.cpp  cargs.h  indexdb.vcxproj  indexdb.vcxproj.filters  main.cpp  rapidcsv.h
win32_tools/krypton/: CMakeLists.txt  argv.c  argv.h  comm_device.c  direct_draw_screen.c  flash_disk.c  getdelim.c  getdelim.h  getopt.h  json.c  json.h  krypton.c  krypton.h  krypton.vcxproj  krypton.vcxproj.filters  krypton_filesystem.c  mfd.cli  mfd_cli.c  mfd_cli.h  mfd_cli_impl.c  slcan.c  slcan.h  splash_320_240.c  win_flash_image.c
win32_tools/mcp/: CMakeLists.txt  mcp.c  mcp.vcxproj  mcp.vcxproj.filters
win32_tools/mcpp/: CMakeLists.txt  eval.c  mcpp.vcxproj  mcpp.vcxproj.filters  noconfig.H
win32_tools/msh/: CMakeLists.txt  msh.c  msh.vcxproj  msh.vcxproj.filters
win32_tools/muon/: CMakeLists.txt  muon.vcxproj  muon.vcxproj.filters
win32_tools/neutron/: CMakeLists.txt  neutron.vcxproj  neutron.vcxproj.filters
win32_tools/photon/: CMakeLists.txt  photon.vcxproj  photon.vcxproj.filters
win32_tools/proton/: CMakeLists.txt  proton.vcxproj  proton.vcxproj.filters
win32_tools/shp2db/: CMakeLists.txt  README.md  contours.csv  dbfopen.c  sbnsearch.c  shapefil.h  shp2db.cpp  shp2db.vcxproj  shp2db.vcxproj.filters  shpopen.c  shptree.c
(+2067 files in other folders)
